# deep-research-ai-agent

./: main.py  pyproject.toml  requirements.txt
src/: clarifier_agent.py  deep_research.py  email_agent.py  planner_agent.py  research_manager.py  serach_agent.py  writer_agent.py
