[project]
name = "deep-research-ai-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "anthropic>=0.68.0",
    "gradio>=5.46.1",
    "httpx>=0.28.1",
    "huggingface-hub[cli]>=0.35.0",
    "ipywidgets>=8.1.7",
    "mailjet-rest>=1.5.1",
    "openai>=1.108.1",
    "openai-agents>=0.3.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
]
